# pyrocketsim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: main.yml
src/: arena.cpp  ball.cpp  ballhitinfo.cpp  boostpad.cpp  car.cpp  carconfig.cpp  carcontrols.cpp  mathtypes.cpp  mutatorconfig.cpp  pyrocketsim.cpp
